// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expenses Summary component correctly with 1 expense 1`] = `
<div>
  <h4>
     viewing 
    1
     
    expense
     totalling
    ₹10,000.00
  </h4>
</div>
`;

exports[`should render Expenses Summary component correctly with multiple expenses 1`] = `
<div>
  <h4>
     viewing 
    5
     
    expenses
     totalling
    ₹234,450.00
  </h4>
</div>
`;
